# cookie-jars

./: .gitignore  README.md  pyproject.toml
cookie_jars/: env.py
cookie_jars/data/: generate_data.ipynb  old_stocks_data.csv
notebooks/: notebook1.ipynb
tests/: test_env.py
