[tool.poetry]
name = "cookie-jars"
version = "0.1.0"
description = ""
authors = ["Dennis Feng <dennisfeng2@gmail.com>"]
readme = "README.md"
packages = [{include = "cookie_jars"}]

[tool.poetry.dependencies]
python = "^3.7"
gym = ">=0.17"
pandas = "^1.1"
plotly = "^5.6.0"
stable-baselines3 = "^1.4.0"
wandb = "^0.12.11"
stockstats = "^0.4.1"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
